--- a/Login_Register/src/main/webapp/WEB-INF/web.xml
+++ b/Login_Register/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,63 @@
 <!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+        "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+        "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
+    <display-name>Archetype Created Web Application</display-name>
+
+
+    <!--    LoginCheckFilter 배포하기-->
+
+    <!--    <filter>-->
+    <!--        <filter-name>logincheck</filter-name>-->
+    <!--        <filter-class>web.LoginCheckFilter</filter-class>-->
+
+    <!--        &lt;!&ndash;-->
+    <!--          <init-param> 태그로 설정한 설정 정보는-->
+    <!--          LoginCheckFilter 객체 전용의 FilterConfig 객체에 등록된다-->
+    <!--        &ndash;&gt;-->
+    <!--        &lt;!&ndash;-->
+    <!--         <init-param>-->
+    <!--            <param-name>attrName</param-name>-->
+    <!--            <param-value>LOGIN_USER</param-value>-->
+    <!--        </init-param>-->
+    <!--        &ndash;&gt;-->
+    <!--    </filter>-->
+
+
+    <!--    <filter>-->
+    <!--        <filter-name>timecheck</filter-name>-->
+    <!--        <filter-class>web.RunningTimeCheckFilter</filter-class>-->
+    <!--    </filter>-->
+
+
+    <!--    <filter-mapping>-->
+    <!--        <filter-name>logincheck</filter-name>-->
+    <!--        <url-pattern>/*</url-pattern>-->
+    <!--    </filter-mapping>-->
+
+    <!--    <filter-mapping>-->
+    <!--        <filter-name>timecheck</filter-name>-->
+    <!--        <url-pattern>/*</url-pattern>-->
+    <!--    </filter-mapping>-->
+
+    <!--    &lt;!&ndash; HttpSession의 만료시간 (분 단위)을 설정한다 &ndash;&gt;-->
+    <!--    <session-config>-->
+    <!--        <session-timeout>3</session-timeout>-->
+    <!--    </session-config>-->
+
+
+    <!--  에러페이지 설정하기 -->
+    <error-page>
+        <error-code>404</error-code>
+        <location>/error/404.jsp</location>
+    </error-page>
+
+    <!-- 서버 에러 페이지 설정 -->
+    <error-page>
+        <error-code>500</error-code>
+        <location>/error/server.jsp</location>
+    </error-page>
+
 </web-app>
+
