--- a/Login_Register/src/main/webapp/WEB-INF/web.xml
+++ b/Login_Register/src/main/webapp/WEB-INF/web.xml
@@ -1,33 +1,40 @@
-<!DOCTYPE web-app PUBLIC
-        "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
-        "http://java.sun.com/dtd/web-app_2_3.dtd" >
-
-<web-app>
-    <display-name>Archetype Created Web Application</display-name>
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee"
+         xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
+         id="WebApp_ID" version="6.0">
 
 
-    <!--    LoginCheckFilter 배포하기-->
+    <!--    <listener>-->
+    <!--        <listener-class>web.listener.LoginUserAddListener</listener-class>-->
+    <!--    </listener>-->
 
+    <!--    <listener>-->
+    <!--        <listener-class>web.listener.LoginUserRemoveListener</listener-class>-->
+    <!--    </listener>-->
+
+
+    <!--    &lt;!&ndash; LoginCheckFilter 배포하기 &ndash;&gt;-->
     <!--    <filter>-->
     <!--        <filter-name>logincheck</filter-name>-->
-    <!--        <filter-class>web.LoginCheckFilter</filter-class>-->
+    <!--        <filter-class>web.filter.LoginCheckFilter</filter-class>-->
 
-    <!--        &lt;!&ndash;-->
-    <!--          <init-param> 태그로 설정한 설정 정보는-->
+    <!--        &lt;!&ndash; -->
+    <!--          <init-param> 태그로 설정한 설정 정보는 -->
     <!--          LoginCheckFilter 객체 전용의 FilterConfig 객체에 등록된다-->
     <!--        &ndash;&gt;-->
-    <!--        &lt;!&ndash;-->
+    <!--        &lt;!&ndash; -->
     <!--         <init-param>-->
     <!--            <param-name>attrName</param-name>-->
     <!--            <param-value>LOGIN_USER</param-value>-->
     <!--        </init-param>-->
     <!--        &ndash;&gt;-->
+
     <!--    </filter>-->
 
 
     <!--    <filter>-->
     <!--        <filter-name>timecheck</filter-name>-->
-    <!--        <filter-class>web.RunningTimeCheckFilter</filter-class>-->
+    <!--        <filter-class>web.filter.RunningTimeCheckFilter</filter-class>-->
     <!--    </filter>-->
 
 
@@ -43,7 +50,7 @@
 
     <!--    &lt;!&ndash; HttpSession의 만료시간 (분 단위)을 설정한다 &ndash;&gt;-->
     <!--    <session-config>-->
-    <!--        <session-timeout>3</session-timeout>-->
+    <!--        <session-timeout> 3 </session-timeout>-->
     <!--    </session-config>-->
 
 
@@ -60,4 +67,3 @@
     </error-page>
 
 </web-app>
-
